--- a/catalog.html
+++ b/catalog.html
@@ -45,12 +45,12 @@
                     <a href="./catalog.html" class="button text_fz22 text_fw700 text_white">
                         Каталог
                     </a>
-                    <a href="" class="button text_fz22 text_fw700 text_white">
+                    <a href="./catalog.html?newer=1" class="button text_fz22 text_fw700 text_white">
                         Новинки
                     </a>
-                    <form action="" method="get" class="main__promo-search text_fz18">
+                    <form action="./catalog.html" method="get" class="main__promo-search text_fz18">
                         <div class="main__promo-search-field">
-                            <input type="text" name="search-string" placeholder="Поиск по наименованию">
+                            <input type="text" name="search-string" id="search" placeholder="Поиск по наименованию" required>
                             <button>
                                 <img src="./assets/images/svg/loop.svg" alt="Поиск">
                             </button>
